--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,13 @@
     "start": "NODE_ENV=production node src/app.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@hapi/joi": "^17.1.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "mongoose": "^5.8.11",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
