--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
+    "bcrypt": "^3.0.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "mongoose": "^5.8.11",
