--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
+    "@hapi/joi-date": "^2.0.1",
     "bcrypt": "^3.0.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
