--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "@hapi/joi": "^17.1.0",
     "@hapi/joi-date": "^2.0.1",
     "bcrypt": "^3.0.8",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
