--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,15 @@
 FROM node:13.6-alpine AS builder
+
 WORKDIR /app
+
 COPY . .
+
+ARG REACT_APP_API_ENDPOINT
+ARG REACT_APP_GOOGLE_MAP_KEY
+
+ENV REACT_APP_API_ENDPOINT $REACT_APP_API_ENDPOINT
+ENV REACT_APP_GOOGLE_MAP_KEY $REACT_APP_GOOGLE_MAP_KEY
+
 RUN yarn install
 RUN yarn run --production build
 
