--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,6 @@ services:
         - SECRET_KEY=
         - MONGO_URL=mongodb://mongo/hostels
         - PORT=3030
-    ports:
-      - "3030:3030"
     links:
       - mongo
 
@@ -26,8 +24,11 @@ services:
     build: 
       context: ./frontend
       args:
-        - REACT_APP_API_ENDPOINT=http://localhost:3030/api
+        - REACT_APP_API_ENDPOINT=http://localhost/api
         - REACT_APP_GOOGLE_MAP_KEY=
-    ports:
-      - "3000:80"
+  
+  nginx:
+    build: ./nginx
+    ports: 
+      - "80:80"
       
