--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,3 +15,4 @@ RUN yarn run --production build
 
 FROM nginx:1.16-alpine
 COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/nginx/default.conf /etc/nginx/conf.d/default.conf
