--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,9 +4,11 @@ server {
   server_tokens off;
 
   location / {
-    root   /usr/share/nginx/html;
-    try_files  $uri /index.html;
     proxy_pass http://frontend;
+    proxy_set_header   Host $host;
+    proxy_set_header   X-Real-IP $remote_addr;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Host $server_name;
   }
 
   location /api {
@@ -15,10 +17,5 @@ server {
     proxy_set_header   X-Real-IP $remote_addr;
     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header   X-Forwarded-Host $server_name;
-  }
-
-  error_page 500 502 503 504 /50x.html;
-  location = /50x.html {
-    root /usr/share/nginx/html;
   }
 }
